src/components/Movies/FilterCheckbox/FilterCheckbox.css
.shorts {
  display: flex;
  align-items: center;
  min-width: 167px;
  box-sizing: border-box;
}

.shorts__label {
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  display: inline-block;
  height: 14px;
  position: relative;
  width: 34px;
  box-sizing: border-box;
}

.shorts__checkbox {
  -webkit-tap-highlight-color: transparent;
  background-color: var(--background-color);
  color: var(--background-color);
  border: none;
  border-radius: 50%;
  left: 1px;
  position: absolute;
  right: 1px;
  top: 1px;
  bottom: 1px;
}

.shorts__toggle {
  height: 14px;
  width: 34px;
  background-color: #343434;
  bottom: 0;
  cursor: pointer;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: 0.4s;
  border-radius: 20px;
}

.shorts__toggle:before {
  background-color: #a0a0a0;
  bottom: 2px;
  content: "";
  height: 10px;
  width: 10px;
  left: 2px;
  position: absolute;
  transition: 0.4s;
  border-radius: 50%;
}

.shorts__checkbox:checked+.shorts__toggle {
  background-color: var(--accent-color);
}

.shorts__checkbox:checked+.shorts__toggle:before {
  transform: translateX(20px);
  background-color: var(--font-color-light);
}

.shorts__title {
  font-weight: 400;
  font-size: 13px;
  line-height: 1.38;
  color: var(--font-color-light);
  margin-right: 14px;
}

@media screen and (max-width: 610px) {
  .shorts__title {
    font-size: 11px;
  }
}

